# evmodin-test

./: Cargo.toml  GreetTest.sol
src/: lib.rs  main.rs
