[package]
name = "evmodin-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evmodin = { git = "https://github.com/vorot93/evmodin", features = ["evmc", "util"] }
# ethers = "0.5.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "chore/update-ethabi" }
structopt = "0.3.22"
tokio = { version = "1.10.1", features = ["macros"] }
primitive-types = "0.10.1"
eyre = "0.6.5"

[patch.'crates-io']
ethabi = { git = "https://github.com/gakonst/ethabi/", branch = "patch-1" }
