[package]
name = "evmodin-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evmodin = { git = "https://github.com/vorot93/evmodin", features = ["evmc", "util"] }
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "chore/update-ethabi" }
structopt = "0.3.22"
tokio = { version = "1.10.1", features = ["macros"] }
eyre = "0.6.5"
hex = "0.4.3"
parking_lot = "0.11.2"
hex-literal = "0.3.3"
bytes = "1.1.0"

[patch.'crates-io']
ethabi = { git = "https://github.com/gakonst/ethabi/", branch = "patch-1" }

[patch.'https://github.com/vorot93/evmodin']
evmodin = { path = "../evmodin" }
