[package]
name = "evmodin-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evm = "0.30.1"
ethers = { git = "https://github.com/gakonst/ethers-rs", branch = "chore/update-ethabi" }
structopt = "0.3.22"
tokio = { version = "1.10.1", features = ["macros"] }
eyre = "0.6.5"

[patch.'crates-io']
ethabi = { git = "https://github.com/gakonst/ethabi/", branch = "patch-1" }
